--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/superagent@8.0.0/dist/superagent.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="js/graph.js"></script>
-  <script src="js/index.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,31 +29,31 @@
       <form id="checkboxForm">
         <div class="checkbox-group">
           <label>
-            <input type="checkbox" name="x" value="-4"> -4
+            <input type="checkbox" name="x" value="-4" onclick="toggleCheckboxes(this)"> -4
           </label>
           <label>
-            <input type="checkbox" name="x" value="-3"> -3
+            <input type="checkbox" name="x" value="-3" onclick="toggleCheckboxes(this)"> -3
           </label>
           <label>
-            <input type="checkbox" name="x" value="-2"> -2
+            <input type="checkbox" name="x" value="-2" onclick="toggleCheckboxes(this)"> -2
           </label>
           <label>
-            <input type="checkbox" name="x" value="-1" > -1
+            <input type="checkbox" name="x" value="-1" onclick="toggleCheckboxes(this)"> -1
           </label>
           <label>
-            <input type="checkbox" name="x" value="0"> 0
+            <input type="checkbox" name="x" value="0" onclick="toggleCheckboxes(this)"> 0
           </label>
           <label>
-            <input type="checkbox" name="x" value="1"> 1
-          </label>
-            <label>
-            <input type="checkbox" name="x" value="2"> 2
+            <input type="checkbox" name="x" value="1" onclick="toggleCheckboxes(this)"> 1
           </label>
           <label>
-            <input type="checkbox" name="x" value="3"> 3
+            <input type="checkbox" name="x" value="2" onclick="toggleCheckboxes(this)"> 2
           </label>
           <label>
-            <input type="checkbox" name="x" value="4"> 4
+            <input type="checkbox" name="x" value="3" onclick="toggleCheckboxes(this)"> 3
+          </label>
+          <label>
+            <input type="checkbox" name="x" value="4" onclick="toggleCheckboxes(this)"> 4
           </label>
         </div>
       </form>
@@ -62,14 +61,15 @@
     <td>
       <label for="y">y:</label>
       <div>
-        <input title="Enter a value y" class="inputY" id="y" type="text" placeholder="Range from -5 to 5"  />
+        <input title="Enter a value y" class="inputY" id="y" type="text" placeholder="Range from -5 to 5" oninput="checkInputs()" />
         <span class="error-message" style="display: block; height: 20px;"></span>
       </div>
     </td>
     <td>
       <label for="R">R:</label>
       <div>
-      <input title="Enter a value R" class="inputR" id="R" type="text" placeholder="Range from -5 to 5"/>
+      <input title="Enter a value R" class="inputR" id="R" type="text" placeholder="Range from -5 to 5" oninput="checkInputs()"/>
+        <span class="error-message" style="display: block; height: 20px;"></span>
       </div>
     </td>
     <td>
@@ -84,8 +84,8 @@
 </table>
 
 <div class="button-group">
-  <button type="reset">Сбросить данные</button>
-  <button type="submit" onclick="checkPoint()">Отправить</button>
+  <button type="reset" onclick="resetForm()">Сбросить данные</button>
+  <button id="submitButton" type="submit" disabled onclick="checkPoint()">Отправить</button>
 </div>
 
 <table id="results">
